<resources>
    <string name="app_name">SKYPATH</string>
    <string name="app_slogan">Your Personal\n Airport\n and \nCargo \nAssistant</string>
    <string name="launcher_text_01">Already have an account?</string>
    <string name="launcher_text_02">Sign in</string>
    <string name="uos_text_01">Lost in the airport?</string>
    <string name="uos_text_02"> Need help finding your gate?</string>
    <string name="uos_text_03">SKYPATH core features not get lost in an airport </string>
    <string name="ul_01">• Real-time flight information and gate updates</string>
    <string name="ul_02">• Interactive airport map with amenities and wayfinding</string>
    <string name="ul_03">• Step-by-step onboarding guidance</string>
    <string name="ul_04">• Accessibility features</string>
    <string name="uos_btn_01">Next</string>
    <string name="uos_btn_02">Back</string>
    <string name="uos02_text_01">Assistant Cargo \nHandling</string>
    <string name="uos02_text_02">Real-time shipment tracking\nDigital document submission\nCommunication and collaboration tools\n
            Automated workflows for efficiency</string>
    <string name="uos03_text_01">Quick view\nBoarding Pass</string>
    <string name="uos03_text_02">Let’s \nGet Started</string>
    <string name="signup_text_01">Create\nAccount</string>
    <string name="signup_form_name_hnt">Name</string>
    <string name="signup_form_email_hnt">Email</string>
    <string name="signup_form_country_hnt">Country</string>
    <string name="signup_form_password_hnt">Password</string>
    <string name="signup_form_pw_confirm_hnt">Confirm Password</string>
    <string name="signup_btn">SIGN UP</string>
    <string name="signup_banner_text01">Already have an account?</string>
    <string name="signup_banner_text02">SIGN IN</string>
    <string name="signin_text_01">Welcome\nBack</string>
    <string name="signin_form_email_hnt">Email</string>
    <string name="signin_form_password_hnt">Password</string>
    <string name="signin_form_forgotpw">Forgot Password ?</string>
    <string name="signin_btn">SIGN IN</string>
    <string name="signin_banner_text01">Don’t have an account?</string>
    <string name="signin_banner_text02">SIGN UP</string>
    <string name="home_text01">Hello Dishal,</string>
    <string name="home_text02">Country  Sri Lanka,</string>
    <string name="home_text03">According to your selected country </string>
    <string name="home_text04">Airports</string>
    <string name="home_search_hnt">Search</string>
    <string name="selected_text_01">Bandaranayake  International \nAirport</string>
    <string name="selected_text_02">Airport Map</string>
    <string name="selected_gate_hnt">Type Gate Number</string>
    <string name="selected_cargo_btn">Cargo Tracking</string>
    <string name="selected_search_btn">Search</string>
    <string name="cargo_txt01">Cargo Tracking</string>
    <string name="cargo_search_hnt">Search</string>
    <string name="cargo_back_btn">Back</string>
</resources>