<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_Onboarding_Screen_01"
    android:background="@color/mainColor02">

    <TextView
        android:id="@+id/uso_text_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/uos_text_01"
        android:textColor="@color/uosColor01"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/uos_image_01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/uos_image_01"
        android:layout_width="347dp"
        android:layout_height="277dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/uos_text_02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/uos_01"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/uos_text_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/uos_text_02"
        android:textColor="@color/uosColor01"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/uos_text_03"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992" />

    <TextView
        android:id="@+id/uos_text_03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/uos_text_03"
        android:textColor="@color/uosColor01"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594" />

    <TextView
        android:id="@+id/uos_ul_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/ul_01"
        android:textColor="@color/uosColor01"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uos_text_03" />

    <TextView
        android:id="@+id/uos_ul_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/ul_02"
        android:textColor="@color/uosColor01"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uos_ul_01" />

    <TextView
        android:id="@+id/uos_ul_03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/ul_03"
        android:textColor="@color/uosColor01"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uos_ul_02" />

    <TextView
        android:id="@+id/uos_ul_04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/ul_04"
        android:textColor="@color/uosColor01"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uos_ul_03" />

    <Button
        android:id="@+id/uos_btn_01"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:layout_marginTop="45dp"
        android:backgroundTint="@color/btnColor"
        android:text="@string/uos_btn_01"
        app:icon="@drawable/uos_btn_next"
        app:iconGravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.779"
        app:layout_constraintStart_toEndOf="@+id/uos_btn_02"
        app:layout_constraintTop_toBottomOf="@+id/uos_ul_04"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/uos_btn_02"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/btnColor"
        android:text="@string/uos_btn_02"
        app:icon="@drawable/uos_btn_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/uos_btn_01"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>