<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    android:backgroundTint="#009688"
    tools:context=".Sign_up_screen">

    <ImageView
        android:id="@+id/signup_img_01"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/signup_text_01"
        app:layout_constraintEnd_toStartOf="@+id/signup_img_02"
        app:layout_constraintHorizontal_bias="0.396"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/signup_btn_01"
        tools:ignore="ContentDescription"
        android:contextClickable="true"/>

    <ImageView
        android:id="@+id/signup_img_02"
        android:layout_width="143dp"
        android:layout_height="146dp"
        android:layout_marginBottom="389dp"
        app:layout_constraintBottom_toTopOf="@+id/fb_sso_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/signup_eclipse"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/signup_text_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/signup_text_01"
        android:textColor="@color/textColor1"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14" />

    <LinearLayout
        android:id="@+id/signup_form"
        android:layout_width="335dp"
        android:layout_height="238dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_text_01"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/signup_form_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/signup_form_name_hnt"
            android:importantForAutofill="yes"
            android:inputType="text"
            android:textColor="@color/textColor1" />

        <EditText
            android:id="@+id/signup_form_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/signup_form_email_hnt"
            android:importantForAutofill="yes"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColor1" />

        <EditText
            android:id="@+id/signup_form_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/signup_form_country_hnt"
            android:importantForAutofill="yes"
            android:inputType="text"
            android:textColor="@color/textColor1" />

        <EditText
            android:id="@+id/signup_form_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/signup_form_password_hnt"
            android:importantForAutofill="yes"
            android:inputType="textPassword"
            android:textColor="@color/textColor1" />

        <EditText
            android:id="@+id/signup_form_pw_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/signup_form_pw_confirm_hnt"
            android:importantForAutofill="yes"
            android:inputType="textPassword"
            android:textColor="@color/textColor1" />

    </LinearLayout>


    <Button
        android:id="@+id/signup_btn"
        android:layout_width="293dp"
        android:layout_height="53dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/btnColor"
        android:text="@string/signup_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_form" />

    <ImageButton
        android:id="@+id/fb_sso_btn"
        android:layout_width="62dp"
        android:layout_height="55dp"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="128dp"
        android:backgroundTint="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ms_sso_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/google_sso_btn"
        app:layout_constraintTop_toBottomOf="@+id/signup_btn"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/signup_fb_sso"
        tools:ignore="ContentDescription"/>

    <ImageButton
        android:id="@+id/ms_sso_btn"
        android:layout_width="62dp"
        android:layout_height="55dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#009688"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fb_sso_btn"
        app:layout_constraintTop_toBottomOf="@+id/signup_btn"
        app:srcCompat="@drawable/signup_ms_sso"
        tools:ignore="ContentDescription"/>

    <ImageButton
        android:id="@+id/google_sso_btn"
        android:layout_width="62dp"
        android:layout_height="55dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="7dp"
        android:backgroundTint="#009688"
        app:layout_constraintEnd_toStartOf="@+id/fb_sso_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_btn"
        app:srcCompat="@drawable/signup_google_sso"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/signup_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fb_sso_btn"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/signup_rectangle" />

    <TextView
        android:id="@+id/signup_banner_text01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/signup_banner_text01"
        android:textColor="@color/textColor1"
        app:layout_constraintBottom_toBottomOf="@+id/signup_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signup_banner"
        app:layout_constraintVertical_bias="0.564" />

    <TextView
        android:id="@+id/signup_banner_text02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="22dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/signup_banner_text02"
        android:textColor="@color/mainColor"
        app:layout_constraintBottom_toBottomOf="@+id/signup_banner"
        app:layout_constraintEnd_toEndOf="@+id/signup_banner"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toEndOf="@+id/signup_banner_text01"
        app:layout_constraintTop_toTopOf="@+id/signup_banner"
        app:layout_constraintVertical_bias="0.0"
        android:contextClickable="true"/>


</androidx.constraintlayout.widget.ConstraintLayout>