<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor02"
    tools:context=".signin_screen"
    >

    <ImageView
        android:id="@+id/signin_img_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/signin_eclipse"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/signin_img_03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/signin_eclipse_02"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/signin_text_01"
        android:layout_width="171dp"
        android:layout_height="123dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/signin_text_01"
        android:textColor="@color/textColor1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signin_img_02" />

    <ImageButton
        android:id="@+id/signin_img_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF7A30"
        app:layout_constraintBottom_toTopOf="@+id/signin_text_01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428"
        app:srcCompat="@drawable/signin_img_01"
        tools:ignore="ContentDescription"
        app:tint="#FFFFFF" />

    <LinearLayout
        android:id="@+id/signin_form"
        android:layout_width="329dp"
        android:layout_height="108dp"
        android:layout_marginTop="112dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_text_01"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/signin_form_email_hnt"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/signin_form_password_hnt"
            android:inputType="textPassword" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/signin_form_forgotpw"
        android:textColor="@color/signinColor01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_form"
        android:longClickable="true"/>

    <ImageView
        android:id="@+id/signin_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/signin_rectangle"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/signin_banner_text_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/signin_banner_text01"
        android:textColor="@color/textColor1"
        app:layout_constraintBottom_toBottomOf="@+id/signin_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.287"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signin_banner"
        app:layout_constraintVertical_bias="0.958" />

    <TextView
        android:id="@+id/signin_banner_text_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/signin_banner_text02"
        android:textColor="@color/btnColor"
        app:layout_constraintEnd_toEndOf="@+id/signin_banner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/signin_banner_text_01"
        app:layout_constraintTop_toTopOf="@+id/signin_banner"
        android:longClickable="true"/>

    <Button
        android:id="@+id/signin_btn"
        android:layout_width="181dp"
        android:layout_height="51dp"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="40dp"
        android:text="@string/signin_btn"
        app:layout_constraintBottom_toTopOf="@+id/signin_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_form"
        app:layout_constraintVertical_bias="0.0"
        android:backgroundTint="@color/btnColor"/>

</androidx.constraintlayout.widget.ConstraintLayout>