<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    tools:context=".User_Onboarding_Screen_02"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="31dp">


    <ImageView
        android:id="@+id/uos02_image_01"
        android:layout_width="120dp"
        android:layout_height="135dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uos02_text_01"
        app:srcCompat="@drawable/uos02_img_01"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/uos02_text_01"
        android:layout_width="337dp"
        android:layout_height="85dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/uos02_text_01"
        android:textColor="@color/textColor1"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/uos02_image_03"
        android:layout_width="120dp"
        android:layout_height="135dp"
        android:layout_marginTop="344dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/uos02_img_03"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/uos02_image_02"
        android:layout_width="120dp"
        android:layout_height="135dp"
        android:layout_marginTop="248dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/uos02_img_02"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/uos02_text_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="488dp"
        android:fontFamily="@font/poppins_semibold"
        android:lineSpacingExtra="8sp"
        android:text="@string/uos02_text_02"
        android:textColor="@color/textColor1"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/uos02_btn_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/btnColor"
        android:text="@string/uos_btn_01"
        app:icon="@drawable/uos_btn_next"
        app:iconGravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uos02_text_02" />

    <Button
        android:id="@+id/uos02_btn_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btnColor"
        android:text="@string/uos_btn_02"
        app:icon="@drawable/uos_btn_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/uos02_btn_01"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/uos02_btn_01"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>